--- a/frontend/src/container/editor/editor.css
+++ b/frontend/src/container/editor/editor.css
@@ -15,6 +15,7 @@
     margin-top: 100px !important;
     margin-left: auto !important;
     margin-right: auto !important;
+    /* background-color: yellow !important; */
 }
 /* Override default */
 .public-DraftEditor-content {
