adding search bar

--- a/frontend/src/component/header/style.css
+++ b/frontend/src/component/header/style.css
@@ -3,3 +3,24 @@
   font-weight: bold;
   /* width: 100vw; */
 }
+.main-nav{
+  margin:0;
+}
+.search{
+  width: 200px;
+}
+.navbar{
+  width: 100%;
+}
+.app nav{
+  margin:0;
+}
+@media only screen and (max-width:1150px){
+  .search{
+    max-width: 600px;
+    width: 80vw;
+  }
+  .btn-search{
+    margin-top: 20px;
+  }
+}
