Adding APIs for search and user details

--- a/frontend/src/container/readblogs/readblogs.css
+++ b/frontend/src/container/readblogs/readblogs.css
@@ -3,7 +3,7 @@
     display: inline-block;
 }
 .blogtag{
-    background-color: #FF9933;
+    /*background-color: #FF9933;*/
     padding: 5px 8px;
     margin-bottom: 10px;
     /* display: block; */
