--- a/frontend/src/component/header/style.css
+++ b/frontend/src/component/header/style.css
@@ -15,6 +15,16 @@
 .app nav{
   margin:0;
 }
+.btn-search{
+    display: inline;
+}
+.search-res{
+  display: inline;
+  
+  position: absolute;
+  /* width: 200px; */
+  /* background-color: green; */
+}
 @media only screen and (max-width:1150px){
   .search{
     max-width: 600px;
