--- a/frontend/src/component/body/style.css
+++ b/frontend/src/component/body/style.css
@@ -1,5 +1,10 @@
 .body-cls{
     height: 100vh;
     /* width: 100vw; */
-    background-color: green;
+    /* background-color: green; */
+    justify-content: center;
+    background-image: url('./../../assets/home-img.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;    
 }
